--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 Flask==2.3.3
 Flask-CORS==4.0.0
-torch==2.1.0
-torchvision==0.16.0
-timm==0.9.7
-numpy==1.24.3
-opencv-python-headless==4.8.1.78
-Pillow==10.0.1
-matplotlib==3.7.2
+torch>=2.0.0,<2.2.0
+torchvision>=0.15.0,<0.17.0
+timm>=0.9.0,<1.0.0
+numpy>=1.24.0,<1.25.0
+opencv-python-headless>=4.8.0,<4.9.0
+Pillow>=10.0.0,<11.0.0
+matplotlib>=3.7.0,<3.8.0
 gunicorn==21.2.0
