chore: removing TTA for speed increase

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@ __pycache__/
 # Idea folders
 .idea/
 
+# website image folders
+New folder/
+website images/
+
 # Distribution / packaging
 .Python
 build/
